# adk-hackathon-professional-development-agent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
adk_hackathon_professional_development_agent/: .env  deploy_to_vertex_ai_agent_engine.py
adk_hackathon_professional_development_agent/agents/: company_information_agent.py  current_or_future_skills_development_agent.py  professional_development_policy_agent.py  training_finder_agent.py  training_finder_and_registerer_workflow_agent.py
adk_hackathon_professional_development_agent/tools/: company_information_tool.py  employee_profile_tool.py  employee_training_history_tool.py  register_new_training_tool.py  training_finder_tool.py
google_adk_professional_development_agent/: agent.py  config.py  create_vertex_ai_search_data_store.py  deploy_to_vertex_ai_agent_engine.py
google_adk_professional_development_agent/agents/: current_or_future_skills_development_agent.py  employee_training_history_and_budget_agent.py  intent_detection_agent.py  training_finder_agent.py  training_registerer_agent.py
google_adk_professional_development_agent/tools/: company_information_search_tool.py  employee_remaining_training_budget_tool.py  project_portfolio_tool.py
google_adk_professional_development_agent/utils/: bigquery_operations.py
tests/: improve_current_skills.test.json  improve_future_skills.test.json  professional_development_policy_question.test.json  question_without_email.test.json  test_config.json  test_professional_development_agent.py  training_budget.test.json
(+3 files in other folders)
